changed the base url to try to fix broken css

--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -37,8 +37,11 @@ h6 {
 
 .intro-message {
     position: relative;
-    padding-top: 20%;
-    padding-bottom: 20%;
+    margin-top: 20%;
+    margin-bottom: 20%;
+    padding-bottom: 10px;
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 3px;
 }
 
 .intro-message > h1 {
